fixed uglify task

--- a/index.html
+++ b/index.html
@@ -198,6 +198,6 @@
         </div>
     </div>
 </body>
-<script src="dist/findem.js"></script>
+<script src="dist/findem.min.js"></script>
 <script type="text/javascript" src="vendor/materialize/js/materialize.min.js"></script>
 </html>
